# gerador-dashboard-squad

./: .env.example  .gitignore  DIGITAL_Sites_Marketing_4450_analysis.csv  Makefile  README.md  README_INTERFACE.md  REFATORACAO.md  SMD_4450_analysis.csv  TEST_1_analysis.csv  claude.md  debug_responsavel.py  erro.md  interface_web.py  pyproject.toml  requirements.txt  sprintcredconta15.csv:Zone.Identifier
.github/workflows/: ci.yml
credcesta/: cli.py  sprint_service.py  utils.py
jiraproject/: __init__.py  cli.py  config.py  utils_arrow.py  utils_calculations.py  utils_constants.py  utils_dates.py  utils_normalize.py
jiraproject/batch/: __init__.py  processor.py
jiraproject/cache/: __init__.py  smart_cache.py
jiraproject/charts/: __init__.py  factory.py
jiraproject/components/: __init__.py  filters.py
jiraproject/credcesta/: __init__.py  __main__.py  charts.py  cli.py  jira_client.py  settings.py
jiraproject/indicators/: __init__.py  business_impact.py  knowledge_distribution.py  quality_trend.py  sprint_efficiency.py  team_happiness.py
jiraproject/metrics/: __init__.py  core.py
jiraproject/models/: __init__.py  validation.py
jiraproject/security/: __init__.py  crypto.py
jiraproject/services/: jira.py
jiraproject/utils/: __init__.py  jira_fields.py  jql.py  log.py  ui.py
metrica/: Untitled.ipynb
metricas/: pyvenv.cfg
notebooks/: legacy_CredCesta.ipynb
tests/: test_cli.py  test_jira_client.py  test_sprint_service.py  test_utils.py
